add Factory package with class BetDaoImplFactory